src/coreclr/tests/src/Loader/classloader/generics/Instantiation/Negative/param01.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <OutputType>Exe</OutputType>
    <CLRTestKind>BuildAndRun</CLRTestKind>
    <CLRTestPriority>1</CLRTestPriority>
  </PropertyGroup>
  <ItemGroup>
    <Compile Include="param01.il" />
  </ItemGroup>
</Project>
